feat: update code dark theme to catppuccin

--- a/src/components/ThemeProvider.astro
+++ b/src/components/ThemeProvider.astro
@@ -12,7 +12,7 @@
 		document.documentElement.classList.toggle("dark", theme === "dark");
 
 		if (theme === "dark") {
-			document.documentElement.setAttribute("data-theme", "min-dark");
+			document.documentElement.setAttribute("data-theme", "catppuccin-mocha");
 		} else {
 			document.documentElement.setAttribute("data-theme", "min-light");
 		}
