--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -129,7 +129,7 @@
 		document.documentElement.classList.remove("dark");
 	} else {
 		document.documentElement.classList.add("dark");
-		document.documentElement.setAttribute("data-theme", "min-dark");
+		document.documentElement.setAttribute("data-theme", "catppuccin-mocha");
 	}
 
 	window.localStorage.setItem("theme", theme);
@@ -139,7 +139,7 @@
 		element.classList.toggle("dark");
 
 		const isDark = element.classList.contains("dark");
-		element.setAttribute("data-theme", isDark ? "min-dark" : "min-light");
+		element.setAttribute("data-theme", isDark ? "catppuccin-mocha" : "min-light");
 		localStorage.setItem("theme", isDark ? "dark" : "light");
 	};
 
