--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,8 +16,8 @@
 		--theme-quote: 234.45deg 70% 62%;
 		--code-line-highlight-color: hsl(0, 0%, 87%);
 		--astro-code-border: hsl(234.45deg 89.47% 90%) !important;
-		--summary-marker-open: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.2em' height='1.2em' viewBox='0 0 24 24' fill='none' stroke='hsl(203deg 11% 15%)' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-chevron-down'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E")
-		--summary-marker-closed: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.2em' height='1.2em' viewBox='0 0 24 24' fill='none' stroke='hsl(203deg 11% 15%)' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-chevron-right'%3E%3Cpath d='m9 18 6-6-6-6'/%3E%3C/svg%3E");
+		--summary-marker-open: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.2em' height='1.2em' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-chevron-down'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E");
+		--summary-marker-closed: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.2em' height='1.2em' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-chevron-right'%3E%3Cpath d='m9 18 6-6-6-6'/%3E%3C/svg%3E");
 	}
 
 	:root.dark {
@@ -38,18 +38,21 @@
 
 	:root,
 	html[data-theme="min-light"] {
-		--theme-code-tabs: #e4e4e4;
+		--theme-code-tabs: #eee;
 		--theme-code-bg: #ffffff;
-		--theme-code-active-tab: #e4e4e4;
-		--theme-code-border: #d2d2d2!important;
+		--theme-code-active-tab: #eee;
+		--theme-code-border: #eee!important;
+        --theme-code-active-tab-text: #666;
+
 	}
 
-	html[data-theme="min-dark"] {
+	html[data-theme="catppuccin-mocha"] {
 		--theme-code-tabs: hsl(240deg 17.1% 8%);
 		--theme-code-active-tab: hsl(240deg 17.1% 8%);
 		--theme-code-bg: hsl(240deg 17.1% 9%);
 		--theme-code-border: #262636 !important;
-	}
+        --theme-code-active-tab-text: #fafafa;
+	   }
 
 	html {
 		@apply scroll-smooth;
@@ -105,6 +108,7 @@
 	align-items: center;
 	line-height: 1;
 	color: var(--calloutAccent);
+	margin-top: 0.5em;
 }
 
 .callout-hint > svg {
@@ -195,13 +199,11 @@ h6:hover span.anchor-icon {
 }
 
 *::selection {
-	background-color: #818cf8;
-	color: #f8fafc;
+	background-color: hsl(234, 100%, 90%);
 }
 
 .dark *::selection {
-	background-color: #c7d2fe;
-	color: #111118;
+	background-color: hsl(234, 30%, 30%) !important;
 }
 
 .astro-code,
@@ -309,7 +311,6 @@ details summary::before {
     vertical-align: middle;
     margin-top: 0.25em;
     margin-right: 0.25em;
-    /* font-size: 1.5em; */
 }
 
 details[open] summary::before {
