feat: crawling back to (you) github-dark as it looks nicer

--- a/src/components/ThemeProvider.astro
+++ b/src/components/ThemeProvider.astro
@@ -12,7 +12,7 @@
 		document.documentElement.classList.toggle("dark", theme === "dark");
 
 		if (theme === "dark") {
-			document.documentElement.setAttribute("data-theme", "catppuccin-mocha");
+			document.documentElement.setAttribute("data-theme", "github-dark");
 		} else {
 			document.documentElement.setAttribute("data-theme", "min-light");
 		}
