--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,4 +1,3 @@
-
 <script>
 	class ThemeToggle extends HTMLElement {
 		constructor() {
@@ -129,7 +128,7 @@
 		document.documentElement.classList.remove("dark");
 	} else {
 		document.documentElement.classList.add("dark");
-		document.documentElement.setAttribute("data-theme", "catppuccin-mocha");
+		document.documentElement.setAttribute("data-theme", "github-dark");
 	}
 
 	window.localStorage.setItem("theme", theme);
@@ -139,7 +138,7 @@
 		element.classList.toggle("dark");
 
 		const isDark = element.classList.contains("dark");
-		element.setAttribute("data-theme", isDark ? "catppuccin-mocha" : "min-light");
+		element.setAttribute("data-theme", isDark ? "github-dark" : "min-light");
 		localStorage.setItem("theme", isDark ? "dark" : "light");
 	};
 
