--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -41,18 +40,17 @@
 		--theme-code-tabs: #eee;
 		--theme-code-bg: #ffffff;
 		--theme-code-active-tab: #eee;
-		--theme-code-border: #eee!important;
-        --theme-code-active-tab-text: #666;
-
+		--theme-code-border: #eee !important;
+		--theme-code-active-tab-text: #666;
 	}
 
-	html[data-theme="catppuccin-mocha"] {
+	html[data-theme="github-dark"] {
 		--theme-code-tabs: hsl(240deg 17.1% 8%);
 		--theme-code-active-tab: hsl(240deg 17.1% 8%);
 		--theme-code-bg: hsl(240deg 17.1% 9%);
 		--theme-code-border: #262636 !important;
-        --theme-code-active-tab-text: #fafafa;
-	   }
+		--theme-code-active-tab-text: #fafafa;
+	}
 
 	html {
 		@apply scroll-smooth;
@@ -93,9 +91,9 @@
 
 .callout {
 	--calloutAccent: hsl(var(--callout-accent, var(--callout-accent-note)));
-	border-left: .25em solid var(--calloutAccent);
+	border-left: 0.25em solid var(--calloutAccent);
 	/* add background color that is the same color as calloutAccent with a transparency */
-	background-color: hsl(var(--callout-accent, var(--callout-accent-note))/ 0.09);
+	background-color: hsl(var(--callout-accent, var(--callout-accent-note)) / 0.09);
 	border-radius: 2px;
 	padding: 0.5rem 1rem;
 	color: inherit;
@@ -125,8 +123,8 @@
 }
 
 .callout-content > * {
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
+	margin-top: 10px !important;
+	margin-bottom: 10px !important;
 }
 
 .callout-content:last-child,
@@ -148,7 +146,7 @@
 }
 
 .callout-title {
-    font-weight: 600;
+	font-weight: 600;
 }
 
 span.anchor-icon {
@@ -300,19 +298,19 @@ a {
 
 ::marker,
 ::-webkit-details-marker {
-   display: none;
- }
+	display: none;
+}
 
 details summary::before {
-    color: var(--calloutAccent);
-    content: var(--summary-marker-closed);
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-    margin-top: 0.25em;
-    margin-right: 0.25em;
+	color: var(--calloutAccent);
+	content: var(--summary-marker-closed);
+	display: inline-block;
+	text-align: center;
+	vertical-align: middle;
+	margin-top: 0.25em;
+	margin-right: 0.25em;
 }
 
 details[open] summary::before {
-    content: var(--summary-marker-open);
+	content: var(--summary-marker-open);
 }
