--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -44,7 +44,7 @@ const { headings } = await post.render();
 		<article class="flex-grow break-words" data-pagefind-body>
 			<div id="blog-hero"><BlogHero content={post} /></div>
 			<div
-				class="prose prose-lg  prose-blockquote:border-l-4 prose-blockquote:not-italic prose-astro mt-12 prose-headings:font-semibold prose-headings:text-accent-2 prose-th:before:content-none"
+				class="prose prose-lg prose-astro mt-12 prose-headings:font-semibold prose-headings:text-accent-2 prose-blockquote:border-l-4 prose-blockquote:not-italic prose-th:before:content-none"
 			>
 				<slot />
 			</div>
