bio: update title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const bio = {
 };
 
 const currentWorkplace = {
-	title: "Software Engineer II",
+	title: "Senior Software Engineer",
 	company: "Microsoft",
 };
 ---
