redirect index -> posts; update header to match portfolio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,71 +1,3 @@
 ---
-import PageLayout from "@/layouts/Base";
-import PostPreview from "@/components/blog/PostPreview";
-import SocialList from "@/components/SocialList";
-import { getAllPosts, sortMDByDate } from "@/utils";
-import Avatar from "@/components/Avatar";
-import MicrosoftLogo from "@/components/MicrosoftLogo";
-import Icon from "astro-icon";
-import "@microflash/remark-callout-directives/theme/github"
-
-const MAX_POSTS = 10;
-const allPosts = await getAllPosts();
-const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
-
-const bio = {
-	name: "Shriram Balaji",
-};
-
-const currentWorkplace = {
-	title: "Senior Software Engineer",
-	company: "Microsoft",
-};
+return Astro.redirect("/posts");
 ---
-
-<PageLayout meta={{ title: "Home" }}>
-	<div class="mt-2 flex max-w-5xl flex-col-reverse items-start md:flex-row">
-		<section class="flex w-full flex-col gap-3 md:placeholder:pr-8" role={"contentinfo"}>
-			<h1 class="ml-[-2px] text-3xl font-bold text-ghostindigo-900 dark:text-white md:text-5xl">
-				{bio.name}
-			</h1>
-			<h2
-				class="text-md inline-flex items-center text-gray-800 dark:text-gray-300 md:text-xl"
-			>
-				{currentWorkplace.title} at
-				<span
-					class="ml-2 inline-flex items-center gap-1.5 font-bold text-gray-800 dark:text-gray-300"
-				>
-					{currentWorkplace.company === "Microsoft" ? <MicrosoftLogo /> : currentWorkplace.company}
-				</span>
-			</h2>
-		</section>
-		<section class="mb-8 md:mb-0">
-			<Avatar />
-		</section>
-	</div>
-	<section>
-		<p class="mb-4 mt-2 max-w-xl leading-8 sm:mt-0 sm:max-w-3xl">
-			Hello! I write about my learnings, thoughts and opinions in this blog.
-		</p>
-		<SocialList />
-	</section>
-	<section aria-label="Blog post list" class="mt-8">
-		<h2 class="title mb-4 text-xl">Latest Articles</h2>
-		<ul class="space-y-4 sm:space-y-2">
-			{
-				allPostsByDate.map((p) => (
-					<li class="flex flex-col gap-x-2 sm:flex-row">
-						<PostPreview post={p} />
-					</li>
-				))
-			}
-		</ul>
-	</section>
-	<section class="mt-4">
-		<p class="text-sm">
-			<Icon class={"h-4 w-4 inline-block mb-1 mr-1 text-accent"} name={"mdi:rss"} aria-hidden="true" focusable="false" />
-			 Subscribe to updates via the
-			<a class="astro-link" href="/rss.xml"> Atom feed</a>
-		</p>
-	</section>
-</PageLayout>
