--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -49,16 +49,16 @@ const paginationProps = {
 ---
 
 <PageLayout meta={meta}>
-	<h1 class="title mb-6 flex items-center">
-		<a href="/tags/" class="text-2xl sm:hover:underline underline-offset-4">Tags</a>
+	<h1 class="text-xl font-bold mb-6 flex items-center mt-2">
+		<a href="/tags/" class="sm:hover:underline underline-offset-4">Tags</a>
 		<span class="me-3 ms-2 text-lg">→</span>
 		<span class="text-xl font-mono">#{tag}</span>
-	</h1>
+</h1>
 	<section aria-label="Blog post list">
 		<ul class="space-y-8">
 			{
 				page.data.map((p) => (
-					<li class="flex flex-col flex-wrap gap-2 sm:flex-row [&_q]:basis-full">
+					<li class="flex flex-col flex-wrap sm:flex-row [&_q]:basis-full items-center gap-2">
 						<PostPreview post={p} as="h2" withDesc />
 					</li>
 				))
