--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -8,11 +8,11 @@ import "@pagefind/default-ui/css/ui.css";
 	<button
 		data-open-modal
 		disabled
-		class="flex h-9 w-9 items-center justify-center rounded-md ring-gray-400 transition-all hover:ring-2"
+		class="flex p-2 cursor-pointer items-center justify-center rounded-lg text-center text-current hover:bg-gray-100 hover:dark:bg-ghostindigo-800 transition-all -mt-1.5"
 	>
 		<svg
 			aria-label="search"
-			class="h-5 w-5 mt-1"
+			class="h-5 w-5 mt-0.5"
 			xmlns="http://www.w3.org/2000/svg"
 			width="16"
 			height="16"
