--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,35 +1,21 @@
 ---
-import { menuLinks, siteConfig } from "@/site-config";
-
 const year = new Date().getFullYear();
 ---
 
-<footer
-	class="mt-auto flex w-full flex-col justify-center gap-y-2 pb-4 pt-20 text-left align-top text-gray-500 sm:flex-row sm:justify-between sm:text-xs"
-
-	<hr class="border-1 mb-6 w-full border-ghostindigo-200/20 dark:border-ghostindigo-800/20"></hr>
-      <p class="text-xs leading-6 text-gray-500 dark:text-ghostindigo-400">
-        <span>Made with&nbsp;</span>
-        <a
-          href="https://astro.build"
-          class="text-indigo-700 underline-offset-2 hover:underline dark:text-indigo-300"
-        >
-          Astro
-        </a>
-		<span>&nbsp;&bull;&nbsp;</span>
-		<a
-          href="https://tailwindcss.com"
-          class="text-indigo-700 underline-offset-2 hover:underline dark:text-indigo-300"
-        >
-          Tailwind
-        </a>
-        <span>&nbsp;&bull;&nbsp;View source on&nbsp;</span>
-		
-        <a
-          href="https://github.com/shrirambalaji/blog.shrirambalaji.com"
-          class="text-indigo-700 underline-offset-2 hover:underline dark:text-indigo-300"
-        >
-          GitHub
-        </a>
-      </p>
-</footer>
+<div class="my-4">
+	<hr
+		class="border-1 inline-block w-full max-w-5xl border-ghostindigo-200/20 dark:border-ghostindigo-800/20"
+	/>
+	<footer class="mx-auto my-0 mt-4 flex max-w-5xl flex-col justify-center p-0">
+		<p class="text-center font-sans text-xs leading-6 text-gray-500 dark:text-ghostindigo-400">
+			<span>View source on&nbsp;</span>
+			<a
+				href="https://github.com/shrirambalaji/blog.shrirambalaji.com"
+				class="text-indigo-400 underline-offset-2 hover:underline dark:text-indigo-300"
+			>
+				GitHub
+			</a>
+			<span>&nbsp;&bull;&nbsp;&nbsp;Copyright © {year} Shriram Balaji</span>
+		</p>
+	</footer>
+</div>
