hide search since pagefind is broken

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -127,7 +127,7 @@ const getPageHeading = () => {
 					role="link"
 					class="group mr-0 inline-flex cursor-pointer items-center fill-ghostindigo-300 text-center text-current transition-all duration-75 ease-in-out hover:fill-ghostindigo-800 dark:fill-ghostindigo-300 dark:hover:fill-ghostindigo-100 md:inline-block mt-1.5" 
 				>
-					<Search />
+					<!-- <Search /> -->
 				</span>
 			</li>
 			<li class="hidden md:inline-block px-3">
