--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -31,7 +31,7 @@ const {
 		<SkipLink />
 		<Header />
 		<MobileMenu />
-		<main id="main" class="container px-8 lg:px-0">
+		<main id="main" class="container px-8 pt-8 lg:px-0">
 			<slot />
 		</main>
 		<Footer />
