--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -12,9 +12,9 @@ const { post, as: Tag = "div", withDesc = false } = Astro.props;
 const postDate = post.data.updatedDate ?? post.data.publishDate;
 ---
 
-<FormattedDate date={postDate} class="min-w-[100px] font-medium text-gray-500 dark:text-ghostindigo-400" />
+<FormattedDate date={postDate} class="min-w-[100px] font-medium text-gray-500 dark:text-ghostindigo-400 self-start md:self-center" />
 <Tag>
-	<a href={`/posts/${post.slug}/`} class="astro-link text-lg font-semibold" rel="prefetch">
+	<a href={`/posts/${post.slug}/`} class="astro-link text-lg self-start font-semibold" rel="prefetch">
 		{post.data.title}
 	</a>
 </Tag>
