--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import type { CollectionEntry } from "astro:content";
 import BaseLayout from "./Base.astro";
 import BlogHero from "@/components/blog/Hero";
 import TOC from "@/components/blog/TOC";
+import SeriesNavigation from "../components/blog/SeriesNavigation.astro";
 
 interface Props {
 	post: CollectionEntry<"post">;
@@ -48,6 +49,7 @@ const { headings } = await post.render();
 			>
 				<slot />
 			</div>
+			<SeriesNavigation post={post} />
 		</article>
 	</div>
 	<button
