--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -4,13 +4,13 @@ import type { CollectionEntry } from "astro:content";
 import PageLayout from "@/layouts/Base";
 import PostPreview from "@/components/blog/PostPreview";
 import Pagination from "@/components/Paginator";
-import { getAllPosts, getUniqueTags, sortMDByDate } from "@/utils";
+import { getAllPosts, getUniqueTags, getPostsGroupedBySeries } from "@/utils";
 
 export const getStaticPaths = (async ({ paginate }) => {
 	const allPosts = await getAllPosts();
-	const allPostsByDate = sortMDByDate(allPosts);
+	const groupedPosts = getPostsGroupedBySeries(allPosts);
 	const uniqueTags = getUniqueTags(allPosts);
-	return paginate(allPostsByDate, { props: { uniqueTags }, pageSize: 6 });
+	return paginate(groupedPosts, { props: { uniqueTags }, pageSize: 10 });
 }) satisfies GetStaticPaths;
 
 interface Props {
@@ -21,7 +21,7 @@ interface Props {
 const { page, uniqueTags } = Astro.props;
 
 const meta = {
-	title: "Posts",
+	title: page.currentPage === 1 ? "Posts" : `Posts - Page ${page.currentPage}`,
 	description: "Ready my collection of posts and the things that interest me",
 };
 
@@ -29,7 +29,7 @@ const paginationProps = {
 	...(page.url.prev && {
 		prevUrl: {
 			url: page.url.prev,
-			text: `← Latest Posts`,
+			text: `← Newer Posts`,
 		},
 	}),
 	...(page.url.next && {
@@ -42,7 +42,7 @@ const paginationProps = {
 ---
 
 <PageLayout meta={meta}>
-	<h1 class="text-xl font-bold mb-6">Latest Posts</h1>
+	<h1 class="text-xl font-bold mb-6">{page.currentPage === 1 ? "Latest Posts" : `Older Posts - Page ${page.currentPage}`}</h1>
 	<div class="grid gap-y-16 sm:grid-cols-[5fr_1.4fr] sm:gap-x-8">
 		<section aria-label="Blog post list">
 			<ul class="space-y-6 text-start">
