--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -215,7 +215,7 @@ h6:hover span.anchor-icon {
 }
 
 .dark *::selection {
-	background-color: hsl(234, 30%, 30%) !important;
+	background-color: rgba(54, 58, 99, 0.25) !important;
 }
 
 .astro-code,
