--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -68,7 +68,7 @@ const getPageHeading = () => {
 	class="container sticky top-0 z-20"
 >
 	<nav
-		class="flex w-full h-full items-center justify-between border-gray-200 bg-transparent bg-opacity-60 px-8 lg:px-0 py-2 text-gray-900 dark:border-gray-700 dark:text-gray-100 md:items-center sticky"
+		class="flex w-full h-full items-center justify-between border-gray-200 bg-transparent bg-opacity-60 px-8 lg:px-0 py-2 text-gray-900 dark:border-gray-700 dark:text-gray-100 md:items-center sticky -ml-3.5"
 		aria-labelledby="main navigation bar"
 	>
 		<button
@@ -94,7 +94,7 @@ const getPageHeading = () => {
 
 		<!-- Mobile page heading -->
 		<h1
-			class="ml-3 mr-auto flex text-lg font-medium tracking-wide text-ghostindigo-800 dark:text-gray-200 md:hidden"
+			class="mr-auto flex text-lg font-medium text-ghostindigo-800 dark:text-gray-200 md:hidden"
 		>
 			{getPageHeading()}
 		</h1>
