--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -68,7 +68,7 @@ const getPageHeading = () => {
 	class="container sticky top-0 z-20"
 >
 	<nav
-		class="flex w-full h-full items-center justify-between border-gray-200 bg-transparent bg-opacity-60 px-8 lg:px-0 py-2 text-gray-900 dark:border-gray-700 dark:text-gray-100 md:items-center sticky -ml-3.5 md:ml-0"
+		class="flex w-full h-full items-center justify-between border-gray-200 bg-transparent bg-opacity-60 px-8 lg:px-0 py-2 pt-4 text-gray-900 dark:border-gray-700 dark:text-gray-100 md:items-center sticky -ml-3.5 md:ml-0"
 		aria-labelledby="main navigation bar"
 	>
 		<button
